--- a/views/AppLove-master/css/main.css
+++ b/views/AppLove-master/css/main.css
@@ -15,6 +15,7 @@ body {
   margin: 0 auto;
   font-size: 16px;
   line-height: 1.71429;
+  font-family: 'Raleway', sans-serif;
 }
 
 img {
@@ -56,14 +57,15 @@ img {
   margin: 0px;
 }
 
-a {
+a{
   color: #373B47;
   text-decoration: none;
 }
 
 a:hover {
   color: #E95853;
-}
+  cursor: pointer;
+  }
 
 .text-uppercase {
   text-transform: uppercase;
@@ -71,6 +73,33 @@ a:hover {
 
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
 
-header a{
-  border: 1px solid black;
+header nav a{
+  display: inline-block;
+  margin-left: 80px;
+  margin-top: 25px;
+}
+
+header nav img{
+  position: absolute;
+  top: 15px;
+  right: 10%;
+  width: 50px;
+  height: auto;
+}
+
+header{
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
+  height: 80px;
+}
+
+section div img{
+   width: 100%;
+   margin-top: 80px;
+}
+
+div h2 h3{
+  display: block;
+  bottom: 100px;
 }
