--- a/views/AppLove-master/index.html
+++ b/views/AppLove-master/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>AppLove</title>
   </head>
   <body>
     <header>
-      <div>
-        <a>Services</a>
-        <a>Work</a>
-        <a>The team</a>
-      </div>
+      <nav class="text-uppercase">
+        <a href="#">Services</a>
+        <a href="#">Work</a>
+        <a href="#">The team</a>
+        <img src="assets/images/logo.png" alt="logo">
+      </nav>
     </header>
     <section>
       <div>
