--- a/views/AppLove-master/index.html
+++ b/views/AppLove-master/index.html
@@ -17,36 +17,43 @@
         <img src="assets/images/logo.png" alt="logo">
       </nav>
     </header>
-    <section>
+    <section class="text-uppercase">
       <div>
         <img src="assets/images/bg-home.jpg" alt="home">
-        <h2>you just found an untilmate</h2>
-        <h1>We are applove from heart</h1>
-        <p>handcrafted - modern design - pixel perfect - passioned design</p>
-        <a>View services</a>
+        <article class="portada">
+          <h3>you just found an untilmate</h3>
+          <h1>We are applove from heart</h1>
+          <p>handcrafted - modern design - pixel perfect - passioned design</p>
+          <a href="#">View services</a>
+        </article>
       </div>
     </section>
     <section>
-      <div>
-        <h2>Services</h2>
-        <h4>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-        </h4>
+      <div class="services">
+        <section class="design">
+          <h2 class="text-uppercase">Services</h2>
+          <h4 class="white">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+          </h4>
+        </section>
         <div>
-          <h5>user interface design</h5>
+          <img src="assets/images/services-1.png" alt="services">
+          <h5 class="text-uppercase">user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
         <div>
-          <h5>concept and ideas</h5>
+          <img src="assets/images/services-2.png" alt="services">
+          <h5 class="text-uppercase">concept and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
         <div>
-          <h5>desing and branding</h5>
+          <img src="assets/images/services-3.png" alt="services">
+          <h5 class="text-uppercase">desing and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
           <h6>Identity Design</h6>
@@ -54,7 +61,7 @@
       </div>
     </section>
     <section>
-      <div>
+      <div class="work">
         <h2>work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
